// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Form /> renders the <Form /> with a success 1`] = `
<div
  class="form__Container-sc-7952rh-0 eRNium"
>
  <div
    class="form__Success-sc-7952rh-2 gXmYAy"
  >
    You have successfully signed up! &lt;br&gt; Please wait...
  </div>
  <button
    class="form__Submit-sc-7952rh-9 hIELzY"
    type="submit"
  >
    Sign Up
  </button>
</div>
`;

exports[`<Form /> renders the <Form /> with an error 1`] = `
<div
  class="form__Container-sc-7952rh-0 eRNium"
>
  <div
    class="form__Error-sc-7952rh-1 iqRrPx"
  >
    Your email address is already being used
  </div>
  <button
    class="form__Submit-sc-7952rh-9 hIELzY"
    type="submit"
  >
    Sign In
  </button>
</div>
`;

exports[`<Form /> renders the <Form /> with populated data 1`] = `
<div
  class="form__Container-sc-7952rh-0 eRNium"
>
  <h1
    class="form__Title-sc-7952rh-4 iEPTar"
  >
    Sign In Now
  </h1>
  <form
    class="form__Base-sc-7952rh-3 fvfWqS"
  >
    <input
      class="form__Input-sc-7952rh-8 cZTLTB"
      placeholder="Email address"
    />
    <input
      class="form__Input-sc-7952rh-8 cZTLTB"
      placeholder="Password"
      type="password"
    />
    <button
      class="form__Submit-sc-7952rh-9 hIELzY"
      disabled=""
      type="submit"
    >
      Sign In
    </button>
  </form>
  <p
    class="form__Text-sc-7952rh-5 HWrKw"
  >
    New to Netflix? 
  </p>
  <p
    class="form__TextSmall-sc-7952rh-6 gVSpEC"
  >
    This page is protected by Google reCAPTCHA to ensure you're not a bot. Learn more.
  </p>
</div>
`;
